# bsc_thesis

./: .gitignore  __init__.py  export_to_excel.py  exported.xlsx  gui.py  measure.py  measure_result - Copy.txt  measure_result.txt  measure_result_2.txt  measure_result_3.txt  requirements.txt
other_files/cpp/: CMakeLists.txt  cpp_calculate.cpp
src/: __init__.py  add_impluse_noise_to_video.py  add_impulse_noise_to_img.py  convert_to_grayscale.py  convert_video_to_grayscale.py  decrease_video_size.py  gui.py  test.py
src/dlls/: __init__.py  cpp_caller.py
src/image_filters/: __init__.py  basic_median.py  directional_weighted_median.py  scalane_runner.py  test.py  two_pass_median.py  weighted_median_blur.py
src/math_helpers/: __init__.py  mse_for_images.py  signal_to_noise_ratio.py
src/video_filter_with_multiple_frames/: dir_w_median_cube.py  simple_median_cube.py  two_pass_median_cube.py  weighted_median_cube.py
src/video_filters/: directional_weighted_median_for_video_frame.py  simple_median_for_video_frame.py  simple_median_v.py  two_pass_median_for_video_frame.py  weighted_median_for_every_frame.py
tests/: test_add_impulse_noise_to_img.py  test_math_helper.py
